Try fixing filter scrolldown on mobile layout

--- a/src/component/Collection.module.css
+++ b/src/component/Collection.module.css
@@ -296,8 +296,8 @@
   background-color: #000;
   opacity: .2;
   position: fixed;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   z-index: 15;
   top: 0;
   left: 0
